Increase max timeout and retries for USB

--- a/knxd/Dockerfile
+++ b/knxd/Dockerfile
@@ -24,7 +24,7 @@ RUN set -xe \
      && apk add --no-cache \
                 libusb \
                 libev \
-     && git clone -b stable https://github.com/knxd/knxd.git \
+     && git clone -b stable https://github.com/lukaszolek/knxd.git \
      && cd knxd \
      && ./bootstrap.sh \
      && ./configure --disable-systemd --enable-tpuart --enable-usb --enable-eibnetipserver --enable-eibnetip --enable-eibnetserver --enable-eibnetiptunnel \
